# ctpmini_trader

./: .clang-format  .gitignore  CMakeLists.text  CMakeLists.txt  Makefile  README.md  main.cpp  main.h  main.out
.github/ISSUE_TEMPLATE/: bug.yaml  request.yaml
.github/workflows/: manual-ci.yml
include/: CMakeLists.txt  ctpmini.cpp  ctpmini.h
include/mdapi/: ThostFtdcMdApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
include/traderapi/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
lib/: traderApi.cpp  traderApi.h
